<resources>
    <string name="app_name">iService</string>
    <string name="cadastrar">CADASTRAR</string>
    <string name="enter">ENTRAR</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="name">Nome</string>
    <string name="signIn">Não tem uma conta? Crie aqui!</string>
    <string name="photo">Foto</string>
    <string name="contacts">Contatos</string>
    <string name="logout">Logout</string>
    <string name="cadastarmin">Cadastrar</string>
    <string name="menuBuscaP">Buscar Profissionais</string>
    <string name="chat">Enviar</string>
    <string name="message">Digite a mensagem</string>
    <string name="messages">Mensagens</string>
    <string name="anuncios">Meus anúncios</string>
    <string name="meuperfil">Meu perfil</string>
    <string name="login">Login</string>
    <string name="cep">CEP:</string>
    <string name="cpf">CPF:</string>
    <string name="bairro">Bairro:</string>
    <string name="idade">Idade:</string>
    <string name="serviceDesc">Descrição do serviço:</string>
    <string name="endereco">Endereço:</string>
    <string name="cidade">Cidade:</string>
    <string name="servico">Serviço</string>
    <string name="atendimento">Atendimento</string>
    <string name="orcamento">Orçamento</string>
    <string name="loading">Carregando...</string>
    <string name="meu_portf_lio">Meu portfólio</string>
    <string name="adicionar_imagem">Adicionar imagem:</string>
    <string name="descreva_o_servico">Descreva o serviço:</string>
    <string name="descricao_do_servico">Descrição do serviço</string>
    <string name="Add">Adicionar</string>
    <string name="anunciar">Anunciar</string>
    <string name="nome_para_servico">Dê um nome para o serviço:</string>
    <string name="nome_do_servico">Nome do serviço</string>
</resources>