<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    android:fillViewport="true"
    android:padding="16dp"
    tools:context=".activities.profissional.LoginPAct">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="330dp"
            android:layout_height="220dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.19999999"
            app:srcCompat="@drawable/logoblack" />

        <EditText
            android:id="@+id/txt_loginprofissional_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="56dp"
            android:background="@drawable/textborderdarkorange"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/txt_loginprofissional_senha"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="56dp"
            android:background="@drawable/textborderdarkorange"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/senha"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/txt_loginprofissional_email"
            app:layout_constraintStart_toStartOf="@+id/txt_loginprofissional_email"
            app:layout_constraintTop_toBottomOf="@+id/txt_loginprofissional_email" />

        <Button
            android:id="@+id/btn_loginprofissional_enter"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="96dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="96dp"
            android:fontFamily="@font/averia_gruesa_libre"
            android:text="@string/enter"
            android:textSize="16sp"
            android:textStyle="bold"
            app:backgroundTint="@color/darkOrange"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="@+id/txt_loginprofissional_senha"
            app:layout_constraintStart_toStartOf="@+id/txt_loginprofissional_senha"
            app:layout_constraintTop_toBottomOf="@+id/txt_loginprofissional_senha" />

        <TextView
            android:id="@+id/txt_loginprofissional_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/averia_gruesa_libre"
            android:text="@string/signIn"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/btn_loginprofissional_enter"
            app:layout_constraintStart_toStartOf="@+id/btn_loginprofissional_enter"
            app:layout_constraintTop_toBottomOf="@+id/btn_loginprofissional_enter" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>