<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    android:fillViewport="true"
    tools:context=".activities.profissional.ADDPortAct">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/averia_gruesa_libre"
            android:text="@string/adicionar_imagem"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_addport_foto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_max="170dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:srcCompat="@android:drawable/stat_sys_upload" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/averia_gruesa_libre"
            android:text="@string/descreva_o_servico"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/txt_addpot_detalhes"
            app:layout_constraintStart_toStartOf="parent" />


        <EditText
            android:id="@+id/txt_addpot_detalhes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="82dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/textborderdarkorange"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/descricao_do_servico"
            android:maxWidth="340dp"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_addport_foto" />

        <Button
            android:id="@+id/btn_addport_cadastrar"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/averia_gruesa_libre"
            android:text="@string/Add"
            android:textSize="16sp"
            android:textStyle="bold"
            app:backgroundTint="@color/darkOrange"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_addpot_detalhes" />

        <ProgressBar
            android:id="@+id/progress_addport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/btn_addport_cadastrar"
            app:layout_constraintEnd_toEndOf="@+id/btn_addport_cadastrar"
            app:layout_constraintStart_toStartOf="@+id/btn_addport_cadastrar"
            app:layout_constraintTop_toTopOf="@+id/btn_addport_cadastrar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>