<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    android:fillViewport="true"
    tools:context=".activities.contratante.AnuncioDescCAct">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:background="@color/LightGray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">


            <ImageView
                android:id="@+id/img_anuncio_desc_c_iconServico"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="32dp"
                android:fontFamily="@font/averia_gruesa_libre"
                app:layout_constraintBottom_toBottomOf="@+id/img_anuncio_desc_c_userfoto"
                app:layout_constraintStart_toEndOf="@+id/img_anuncio_desc_c_userfoto"
                tools:srcCompat="@tools:sample/avatars" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_anuncio_desc_c_userfoto"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                app:civ_border_color="@color/purple_500"
                app:civ_border_width="2dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_anuncio_desc_c_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:fontFamily="@font/averia_gruesa_libre"
                android:text="@string/loading"
                android:textColor="@color/purple_500"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/img_anuncio_desc_c_userfoto"
                app:layout_constraintTop_toTopOf="@+id/img_anuncio_desc_c_userfoto" />

            <TextView
                android:id="@+id/txt_anuncio_desc_c_tipo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/averia_gruesa_libre"
                android:text="@string/loading"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/img_anuncio_desc_c_iconServico"
                app:layout_constraintStart_toEndOf="@+id/img_anuncio_desc_c_iconServico" />

            <TextView
                android:id="@+id/txt7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="60dp"
                android:fontFamily="@font/averia_gruesa_libre"
                android:text="@string/cep"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_anuncio_desc_c_userfoto" />

            <TextView
                android:id="@+id/txt9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/averia_gruesa_libre"
                android:text="@string/endereco"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt7" />

            <TextView
                android:id="@+id/txt_anuncio_desc_c_endereco"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/averia_gruesa_libre"
                android:text="@string/loading"
                android:textAlignment="textEnd"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt9" />

            <TextView
                android:id="@+id/txt_anuncio_desc_c_cep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/averia_gruesa_libre"
                android:text="@string/loading"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txt7" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="32dp"
                android:background="@color/Darkgray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt7" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="32dp"
                android:background="@color/Darkgray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_anuncio_desc_c_endereco" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/averia_gruesa_libre"
                android:text="@string/serviceDesc"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <TextView
                android:id="@+id/txt_anuncio_desc_c_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="60dp"
                android:background="@drawable/textborderpurple"
                android:fontFamily="@font/averia_gruesa_libre"
                android:padding="8dp"
                android:text="@string/loading"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_anuncio_desc_c_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="4dp"
                android:elevation="5dp"
                app:backgroundTint="@color/purple_500"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:maxImageSize="30dp"
                app:srcCompat="@drawable/icon_message" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_anuncio_desc_c_perfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:elevation="5dp"
                app:backgroundTint="@color/purple_500"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:maxImageSize="30dp"
                app:srcCompat="@drawable/icon_user1" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>